# Jetbrains-AI-Engineer-Task

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/: README.md
artifacts_api_final/: README.md  frozen_architecture.json
artifacts_api_final/evaluations/: baseline_holdout_20260512_145311.json  frozen_holdout_20260512_145311.json  latest_baseline_holdout.json  latest_candidate_evidence_first_validation.json  latest_candidate_expanded_retrieval_validation.json  latest_frozen_holdout.json  research_failures_specialist_validation_20260512_145302.json
artifacts_api_final/evolution/: latest_evolution_report.md  latest_experiments.json
artifacts_api_final/traces/: baseline_holdout_20260512_145311.jsonl  candidate_evidence_first_validation_20260512_145302.jsonl  candidate_expanded_retrieval_validation_20260512_145302.jsonl  evolve_20260512_145256.jsonl  frozen_holdout_20260512_145311.jsonl  research_failures_specialist_validation_20260512_145302.jsonl
configs/: baseline.json
data/corpus/: documents.jsonl
data/domains/: research_agent_failures.yaml
data/eval/: research_tasks.jsonl
data/workflows/: research_workflows.jsonl
docs/: writeup_outline.md
research_stem/: __init__.py  agent.py  cli.py  compat.py  corpus.py  evaluation.py  evolution.py  io.py  llm.py  memory.py  models.py  observability.py  tools.py
tests/: test_research_stem.py
